--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,92 +1,17 @@
 version: '3.8'
 
 services:
-  theme-park:
-    image: ghcr.io/theme-park/theme.park:latest
-    container_name: theme-park
+  vader-flix:
+    image: nginx:alpine
+    container_name: vader-flix
     environment:
       - PUID=1027
       - PGID=65536
       - TZ=America/New_York
     volumes:
-      - /volume1/docker/theme-park:/config
+      - /volume1/docker/projects/vader-flix-webapp:/usr/share/nginx/html
     ports:
-      - 8085:8080
-    networks:
-      - synobridge
-    restart: unless-stopped
-
-  sonarr:
-    image: lscr.io/linuxserver/sonarr:latest
-    container_name: sonarr
-    environment:
-      - PUID=1027
-      - PGID=65536
-      - TZ=America/New_York
-    volumes:
-      - /volume1/docker/sonarr:/config
-      - /volume1/media/tv:/tv
-      - /volume1/media/downloads:/downloads
-    ports:
-      - 8989:8989
-    networks:
-      - synobridge
-    restart: unless-stopped
-
-  radarr:
-    image: lscr.io/linuxserver/radarr:latest
-    container_name: radarr
-    environment:
-      - PUID=1027
-      - PGID=65536
-      - TZ=America/New_York
-    volumes:
-      - /volume1/docker/radarr:/config
-      - /volume1/media/movies:/movies
-      - /volume1/media/downloads:/downloads
-    ports:
-      - 7878:7878
-    networks:
-      - synobridge
-    restart: unless-stopped
-
-  prowlarr:
-    image: lscr.io/linuxserver/prowlarr:latest
-    container_name: prowlarr
-    environment:
-      - PUID=1027
-      - PGID=65536
-      - TZ=America/New_York
-    volumes:
-      - /volume1/docker/prowlarr:/config
-    ports:
-      - 9696:9696
-    networks:
-      - synobridge
-    restart: unless-stopped
-
-  flaresolverr:
-    image: ghcr.io/flaresolverr/flaresolverr:latest
-    container_name: flaresolverr
-    environment:
-      - TZ=America/New_York
-    ports:
-      - 8191:8191
-    networks:
-      - synobridge
-    restart: unless-stopped
-
-  overseerr:
-    image: lscr.io/linuxserver/overseerr:latest
-    container_name: overseerr
-    environment:
-      - PUID=1027
-      - PGID=65536
-      - TZ=America/New_York
-    volumes:
-      - /volume1/docker/overseerr:/config
-    ports:
-      - 5055:5055
+      - 8091:80
     networks:
       - synobridge
     restart: unless-stopped
