--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   vader-flix:
-    image: nginx:alpine
+    build: .
     container_name: vader-flix
     environment:
       - PUID=1027
