--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name localhost;
-    root /usr/share/nginx/html/frontend;
+    root /usr/share/nginx/html;
     index index.html;
 
     location / {
